--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,61 @@ section {
     border-radius: 50%;
     box-shadow: 0 0 0 113px #283972, 0 0 0 114px #223161, 0 0 193px #2a3d79, 0 0 0 194px #273971, 0 0 0 254px #2c3f7e, 0 0 255px #2a3c79;
 }
+
+.bg-start {
+    width: 100%;
+    height: 100%;
+    background: url(../imgs/star.png) no-repeat;
+    background-size: cover;
+    position: absolute;
+}
+
+.main_page1 {
+    width: 429px;
+    height: 429px;
+    position: absolute;
+    top: 50%;
+    height: 50%;
+    margin-left: 217px;
+    margin-top: -217px;
+}
+
+.main_page1 .rocket {
+    width: 165px;
+    height: 195px;
+    position: absolute;
+    top: -29px;
+    left: 48px;
+    background: url(../imgs/rocket.png) no-repeat;
+    animation: rocket 1s;
+    -webkit-animation: rocket 1s;
+}
+
+.main_page1 .thanks {
+    width: 400px;
+    height: 300px;
+    position: absolute;
+    background: url(../imgs/thanks.png) no-repeat;
+    top: 100px;
+    left: 100px;
+    animation: thanks 1s;
+    -webkit-animation: thanks 1s;
+    animation-delay: 1s;
+    -webkit-animation-delay: 1s;
+    animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+}
+
+.arrow {
+    width: 90px;
+    height: 65px;
+    position: absolute;
+    left: 50%;
+    margin-left: -45px;
+    bottom: 40px;
+    background: url(../imgs/arrow.png) no-repeat;
+    animation: arrow 1s;
+    -webkit-animation: arrow 1s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+}
