--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,40 @@ section {
     animation-fill-mode: forwards;
     -webkit-animation-fill-mode: forwards;
 }
+
+.sectionOut .main_page1 .rocket {
+    animation: rocketOut 1s;
+    -webkit-animation: rocketOut 1s;
+    opacity: 1;
+    animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+}
+
+.sectionOut .main_page1 .thanks {
+    animation: thanksOut 1s;
+    -webkit-animation: thanksOut 1s;
+    animation-delay: 0.5s;
+    -webkit-animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+}
+
+.music {
+    width: 50px;
+    height: 47px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.musicRun {
+    background: url(../imgs/run.png) no-repeat;
+    animation: run 3s;
+    -webkit-animation: run 3s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+}
+
+.musicStop {
+    background: url(../imgs/stop.png) no-repeat;
+}
